<resources>
    <string name="app_name">TempScanner</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="enter_password">Enter password</string>
    <string name="email_settings">Email Settings</string>
    <string name="print_badge_settings">Print Badge Settings</string>
    <string name="update">Update</string>
    <string name="version">Version</string>
    <string name="print_badge">Print Badge</string>
    <string name="for_register">For registered user</string>
    <string name="for_register_visitor">For registered visitor</string>
    <string name="for_udregister_visitor">For unregistered visitor</string>
    <string name="show_scan_image">Show scan image</string>
    <string name="show_user_name">Show user name</string>
    <string name="show_user_type">Show user type</string>
    <string name="show_scan_time">Show scan time</string>
    <string name="show_temperature">Show temperature</string>
    <string name="show_company">Show company name</string>
    <string name="print_status">Check printer status</string>
    <string name="no_connected">No Connected</string>
    <string name="email_alert">Email Alerts</string>
    <string name="email_use_custom_smtp">Use Custom SMTP Server</string>
    <string name="email_stmp_server">SMTP Server</string>
    <string name="email_stmp_port">SMTP Port</string>
    <string name="email_stmp_user">SMTP User</string>
    <string name="email_stmp_from">SMTP From Email</string>
    <string name="email_stmp_password">SMTP Password</string>
    <string name="email_use_custom_ssl">SMTP SSL</string>
    <string name="email_use_custom_tls">SMTP TLS</string>
    <string name="email_no_mask">Mask</string>
    <string name="email_recipient">Email recipient</string>
    <string name="email_recipient_summary">Use Commas to Separate Multiple Email Recipients</string>
    <string name="email_register_user">Registered user</string>
    <string name="email_vistor">Visitor / Stranger</string>
    <string name="email_show_photo">Show photo</string>
    <string name="emai_show_user_type">Show user type</string>
</resources>